# moneycopy

./: .gitignore
collctor/: pyproject.toml
collctor/src/main/usa/: usaStock.py  usaStockDag.py
collctor/src/tests/usa/: test_usaStockDag.py
collector/: go.mod
dags/: stock_collector.py  stock_dag.py  stock_data_dag.py  test_stock_dag_unit.py
datastore/: pyproject.toml
datastore/main/usa/: usaStock.py  usaStockDag.py
datastore/tests/usa/: test_usaStockDag.py
infra/: arm64.sh  docker-compose.yml
infra/database/: docker-compose.yml
src/main/usa/: usaStockDag.py
