[tool.poetry]
name = "collctor"
version = "0.1.0"
description = ""
authors = ["Junnyjun <chbe5082@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
apache-airflow = "2.10.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
